# dreamlens

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: DREAMLENS_FEATURE_GUIDE.md  FEATURE_VISUALIZATION_API.md  FEATURE_VISUALIZATION_FROM_ZERO.txt  MAXIMIZE_COMPLETE_FLOW.md  XPLIQUE_FEATURE_VISUALIZATIONS.md
examples/: Feature_Visualization_Getting_started_PyTorch.ipynb  learn_dreamlens_caricature.ipynb  learn_dreamlens_feature_accentuation.ipynb  learn_dreamlens_maco.ipynb  learn_dreamlens_maximize.ipynb  native_dreamlens_results.ipynb
learning_inputs/: README.md
results/native_dreamlens_notebook/: manifest.json
src/dreamlens/: __init__.py  activations.py  atlas.py  feature_visualizer.py  image_parameters.py  layers.py  layout.py  model_wrappers.py  objectives.py  optimization.py  preprocessing.py  render.py  transforms.py
src/dreamlens/data/: README.md
src/dreamlens/features_visualizations/: __init__.py  losses.py  maco.py  objectives.py  optim.py  preconditioning.py  regularizers.py  transformations.py
tests/: test_feature_visualization.py  test_features_visualizations.py  test_smoke.py
