[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamlens"
version = "0.1.1"
description = "PyTorch tools for activation atlases, feature visualization, and image amplification."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "DreamLens Contributors" }
]
keywords = [
  "interpretability",
  "pytorch",
  "feature-visualization",
  "activation-atlas",
  "maco",
  "explainable-ai",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.23",
  "pillow>=9.0",
  "torch>=2.0"
]

[project.optional-dependencies]
atlas = [
  "umap-learn>=0.5"
]
examples = [
  "torchvision>=0.15",
  "matplotlib>=3.5"
]
dev = [
  "pytest>=8.0"
]

[project.urls]
Homepage = "https://github.com/sushmanthreddy/dreamlens"
Repository = "https://github.com/sushmanthreddy/dreamlens.git"
Issues = "https://github.com/sushmanthreddy/dreamlens/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dreamlens = ["data/*.npy"]
